# GraphicsLab1

./: CMakeLists.txt  LICENSE  README.md  Shader.cpp  Shader.h  main.cpp
shaders/: shader.fs  shader.vs
